--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Home</title>
   </head>
   <body>
+    <h1>cambio</h1>
     <header id="header">
       <div class="container">
         <div class="caja-80"><img src="img/ribbon.png" class="img__logo">
@@ -26,9 +27,9 @@
     </header>
     <div class="grupo">
       <div class="caja">
-        <div class="banner"><img src="img/banner1.jpg"><span class="msg"> 
-            <h2>Web Designer</h2></span><span class="msg"> 
-            <h2>Graphic Designer</h2></span><span class="msg"> 
+        <div class="banner"><img src="img/banner1.jpg"><span class="msg">
+            <h2>Web Designer</h2></span><span class="msg">
+            <h2>Graphic Designer</h2></span><span class="msg">
             <h2>Photographer</h2></span></div>
       </div>
     </div>
@@ -44,7 +45,7 @@
         <div class="caja"><img src="img/my.jpg"></div>
         <div class="caja">
           <h2>My Skills</h2>
-          <div class="my__skills"> 
+          <div class="my__skills">
             <div class="skills">
               <p class="photoshop">photoshop</p>
             </div>
